# internal/http/responses/success_devices.go
@@ -11,7 +11,7 @@ type SuccessDevicesResponseData struct {
 	UserUUID  string `json:"userUUID"`
 	UserAgent string `json:"userAgent"`
 	Ip        string `json:"ip"`
-	ExpiredAt int    `json:"expiredAt"`
+	ExpiresAt int    `json:"expiresAt"`
 	CreatedAt int    `json:"createdAt"`
 	UpdatedAt int    `json:"updatedAt"`
 }
@@ -25,7 +25,7 @@ func NewSuccessDevicesResponse(devices []repositories.Device) *SuccessDevicesRes
 			UserUUID:  device.GetUserUUID(),
 			UserAgent: device.GetUserAgent(),
 			Ip:        device.GetIp(),
-			ExpiredAt: device.GetExpiredAt(),
+			ExpiresAt: device.GetExpiresAt(),
 			CreatedAt: device.GetCreatedAt(),
 			UpdatedAt: device.GetUpdatedAt(),
 		}
